--- a/index.html
+++ b/index.html
@@ -5,15 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="main.js" defer></script>
     <title>Library</title>
   </head>
   <body>
     <h1>Library</h1>
 
+    <button id="myBtn">Add new book</button>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <form class="my-form">
+          <h1>Add new book:</h1>
+          <label for="title">Title:</label>
+          <input type="text" class="title" value="test" />
+          <br />
+          <label for="author">Author:</label>
+          <input type="text" class="author" value="test" />
+          <br />
+          <label for="pages"># of pages:</label>
+          <input type="text" class="pages" value="test" />
+          <br />
+          <label for="read">Read:</label>
+          <input type="text" class="read" value="test" />
+          <br />
+          <br />
+          <button class="submit" type="button">Add book</button>
+        </form>
+      </div>
+    </div>
+
     <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+    <script src="main.js" defer></script>
   </body>
 </html>
