fix: solve bug that created multiple divs for every item in the array

--- a/index.html
+++ b/index.html
@@ -26,15 +26,13 @@
           <label for="pages"># of pages:</label>
           <input type="text" class="pages" value="test" />
           <br />
-          <label for="read">Read:</label>
-          <input type="text" class="read" value="test" />
+          <label for="read">Have you read it?</label>
+          <button type="button" class="read" value="test">READ</button>
           <br />
           <br />
           <button class="submit" type="button">Add book</button>
         </form>
       </div>
     </div>
-
-    <div class="card"></div>
   </body>
 </html>
