fix: remove check for read value

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <input type="text" class="pages" value="test" />
           <br />
           <label for="read">Have you read it?</label>
-          <button type="button" class="read" value="test">READ</button>
+          <button type="button" class="read" value="">READ</button>
           <br />
           <br />
           <button class="submit" type="button">Add book</button>
